// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio checked set to false 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c0 .c2 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c2 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c2 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c2 {
  opacity: 0.5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

<div
  className="c0 "
>
  <input
    checked={false}
    className="c1"
    type="radio"
  />
  <div
    className="c2 c3"
  />
</div>
`;

exports[`Radio checked set to true 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c0 .c2 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c2 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c2 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c2 {
  opacity: 0.5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

<div
  className="c0 "
>
  <input
    checked={true}
    className="c1"
    type="radio"
  />
  <div
    className="c2 c3"
  />
</div>
`;

exports[`Radio default 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c0 .c2 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c2 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c2 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c2 {
  opacity: 0.5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

<div
  className="c0 "
>
  <input
    className="c1"
    type="radio"
  />
  <div
    className="c2 c3"
  />
</div>
`;

exports[`Radio should accept disabled 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c0 .c2 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c2 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c2 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c2 {
  opacity: 0.5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

<div
  className="c0 "
>
  <input
    className="c1"
    disabled={true}
    type="radio"
  />
  <div
    className="c2 c3"
  />
</div>
`;

exports[`Radio with aria-describedby 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c0 .c2 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c2 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c2 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c2 {
  opacity: 0.5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

<div
  className="c0 "
>
  <input
    aria-describedby="some-id"
    className="c1"
    type="radio"
  />
  <div
    className="c2 c3"
  />
</div>
`;

exports[`Radio with name and id 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c0 .c2 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c2 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c2::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c2 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c2 {
  opacity: 0.5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

<div
  className="c0 "
>
  <input
    className="c1"
    id="Chucky"
    name="Chuck"
    type="radio"
  />
  <div
    className="c2 c3"
  />
</div>
`;
